<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mainTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/mainImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/utad" />

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/change_image_text" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:onClick="changeImage"
                        android:text="@string/change_image_action" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/change_background" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:onClick="changeBackground"
                        android:text="@string/change_background_action" />
                </TableRow>
            </TableLayout>

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*">

                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:text="@string/hide_show_text" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:onClick="hideImage"
                            android:text="@string/hide_show_action" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:text="@string/contract_image_text" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:onClick="removeImage"
                            android:text="@string/contract_image_action" />
                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:text="@string/ask_for_text_text" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="changeText"
                            android:padding="3dip"
                            android:text="@string/ask_for_text_action" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:text="@string/show_progress_dialog" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="showProgressDialog"
                            android:padding="3dip"
                            android:text="@string/show_progress_dialog_action" />
                    </LinearLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:onClick="closeAppAction"
        android:text="@string/bt_close_app" />
</LinearLayout>